Implement password reset.
Step 1: go to /user/restore or use the form on any other page.
Step 2: follow the /user/restore?uid=N&token=T link.
Step 3: submit a new password, get logged in automatically.

--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -7,7 +7,10 @@
     <label>Email</label>
     <input name="email" type="email" required />
     {{/* todo: recaptcha, tos, privacy policy */}}
-    <p class="notice">By signing up you agree blah-blah-blah...</p>
+    <p class="notice">
+        By clicking "Sign up", you are indicating that you have read and agree to the
+        <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.
+    </p>
     <p class="error"></p>
     <button type="submit">Sign up</button>
 </form>
