--- a/templates/form-user-restore.html
+++ b/templates/form-user-restore.html
@@ -1,4 +1,4 @@
-<form method="POST" class="form-wrapper" action="/user/reset" data-tab="/user/restore">
+<form method="POST" class="form-wrapper" action="/user/restore" data-tab="/user/restore">
     <h2 data-tab-title>Password reset</h2>
     <label>Username</label>
     <input name="username" type="text" />
