--- a/templates/recordings.html
+++ b/templates/recordings.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/global.css" />
-        <link rel="stylesheet" href="/static/css/room.css" />
         <title>webmcast time machine // {{.ID}}</title>
         <style>
-            footer {
-                padding-top: 1rem;
+            #main-section {
+                padding: 0 2rem 1rem 2rem;
             }
         </style>
     </head>
@@ -22,7 +21,7 @@
                     <span>Stream archives / <a href="/{{.ID}}">Back to the live stream</a></span>
                 </div>
             </section>
-            <section class="stream-meta">
+            <section id="main-section">
                 <p>
                 {{- if .Editable }}
                     <b>Disk space used:</b> {{.SpaceUsed}} / {{.SpaceLimit}}
@@ -36,25 +35,25 @@
                 {{- end }}
                 </p>
             {{- if .UserAbout }}
-                <div class="panel"><p data-markup>{{.UserAbout}}</p></div>
+                <x-panel><p data-markup>{{.UserAbout}}</p></x-panel>
             {{- end }}
                 <x-columns>
                     <div>
-                    {{- range $.Recordings }}
-                        <div class="panel">
+                    {{- range $id, $_ := $.Recordings }}
+                        <x-panel data-order="{{$id}}">
                             <h2><a href="/rec/{{$.ID}}/{{.ID}}">{{.Name}}</a></h2>
-                            <div class="info">
+                            <x-panel-footer>
                                 <span>{{.Timestamp.Format "02.01.2006 15:04:05"}}</span>
                                 <x-spacer></x-spacer>
                                 <span>{{.Space}}</span>
                                 <a href="/static/recorded/{{.Path}}" class="icon button" title="Download">&#xf019;</a>
-                            </div>
-                        </div>
+                            </x-panel-footer>
+                        </x-panel>
                     {{- else }}
-                        <div class="panel new-panel">
+                        <x-panel class="dotted" data-order="0">
                             <h2>The archive is empty.</h2>
-                            <div class="info">There is no way to record a stream yet.</div>
-                        </div>
+                            <x-panel-footer>There is no way to record a stream yet.</x-panel-footer>
+                        </x-panel>
                     {{- end }}
                     </div><div></div>
                 </x-columns>
